compiler/src/test/resources/golden/errors/syn_missing_rparen.dawn
fn f(x: Int -> Int = x
