compiler/src/test/resources/golden/errors/syn_missing_rparen.err
error: expected `)`, found `->`
  --> syn_missing_rparen.dawn:1:13
  |
1 | fn f(x: Int -> Int = x
  |             ^^
